--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "mongoose": "^5.12.14",
-    "mongoose-encryption": "^2.1.0"
+    "mongoose-encryption": "^2.1.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0"
   }
 }
